Fix clipping issue on forem sidebar

--- a/app/assets/stylesheets/community.css.scss
+++ b/app/assets/stylesheets/community.css.scss
@@ -18,6 +18,7 @@
   .forum-sidebar {
     position: relative;
     top: 100px;
+    margin-bottom: 100px;
     ul {
       list-style: none;
       li {
